--- a/sub.ui
+++ b/sub.ui
@@ -14,117 +14,6 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QWidget" name="selectsexual" native="true">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>800</width>
-      <height>480</height>
-     </rect>
-    </property>
-    <widget class="QWidget" name="gridLayoutWidget_2">
-     <property name="geometry">
-      <rect>
-       <x>120</x>
-       <y>60</y>
-       <width>541</width>
-       <height>331</height>
-      </rect>
-     </property>
-     <layout class="QGridLayout" name="gridLayout_2">
-      <property name="sizeConstraint">
-       <enum>QLayout::SetDefaultConstraint</enum>
-      </property>
-      <item row="1" column="1" alignment="Qt::AlignHCenter">
-       <widget class="QTextBrowser" name="textBrowser_4">
-        <property name="maximumSize">
-         <size>
-          <width>16777215</width>
-          <height>30</height>
-         </size>
-        </property>
-        <property name="mouseTracking">
-         <bool>true</bool>
-        </property>
-        <property name="lineWrapMode">
-         <enum>QTextEdit::WidgetWidth</enum>
-        </property>
-        <property name="html">
-         <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Gulim'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;성별을 선택하세요&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="1" alignment="Qt::AlignHCenter">
-       <widget class="QPushButton" name="button_startchecknoise">
-        <property name="autoFillBackground">
-         <bool>true</bool>
-        </property>
-        <property name="text">
-         <string>학습시작</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1">
-       <widget class="QScrollArea" name="scrollArea_2">
-        <property name="widgetResizable">
-         <bool>true</bool>
-        </property>
-        <widget class="QWidget" name="scrollAreaWidgetContents_2">
-         <property name="geometry">
-          <rect>
-           <x>0</x>
-           <y>0</y>
-           <width>456</width>
-           <height>262</height>
-          </rect>
-         </property>
-         <widget class="QCheckBox" name="checkBox">
-          <property name="geometry">
-           <rect>
-            <x>70</x>
-            <y>90</y>
-            <width>80</width>
-            <height>40</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string>남자</string>
-          </property>
-         </widget>
-         <widget class="QCheckBox" name="checkBox_2">
-          <property name="geometry">
-           <rect>
-            <x>260</x>
-            <y>90</y>
-            <width>80</width>
-            <height>40</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string>여자</string>
-          </property>
-          <property name="checked">
-           <bool>false</bool>
-          </property>
-         </widget>
-        </widget>
-       </widget>
-      </item>
-      <item row="1" column="0">
-       <widget class="QPushButton" name="button_backtomain">
-        <property name="text">
-         <string>뒤로</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </widget>
    <widget class="QWidget" name="result" native="true">
     <property name="geometry">
      <rect>
@@ -197,24 +86,30 @@ p, li { white-space: pre-wrap; }
     <widget class="QPushButton" name="button_exit">
      <property name="geometry">
       <rect>
-       <x>430</x>
-       <y>330</y>
-       <width>80</width>
-       <height>30</height>
+       <x>440</x>
+       <y>340</y>
+       <width>40</width>
+       <height>40</height>
       </rect>
      </property>
+     <property name="styleSheet">
+      <string notr="true">border-image:url(:/exit_button/free-icon-exit-full-screen-7479439.png)</string>
+     </property>
      <property name="text">
-      <string>종료</string>
+      <string/>
      </property>
     </widget>
     <widget class="QPushButton" name="button_rerecord">
      <property name="geometry">
       <rect>
-       <x>290</x>
-       <y>330</y>
-       <width>80</width>
-       <height>30</height>
+       <x>320</x>
+       <y>340</y>
+       <width>40</width>
+       <height>40</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border-image:url(:/record_button/free-icon-voice-recording-3444418.png)</string>
      </property>
      <property name="text">
       <string>재녹음</string>
@@ -234,7 +129,7 @@ p, li { white-space: pre-wrap; }
      <property name="geometry">
       <rect>
        <x>300</x>
-       <y>60</y>
+       <y>80</y>
        <width>200</width>
        <height>31</height>
       </rect>
@@ -253,21 +148,24 @@ p, li { white-space: pre-wrap; }
     <widget class="QPushButton" name="button_backtochecknoise">
      <property name="geometry">
       <rect>
-       <x>200</x>
-       <y>70</y>
+       <x>150</x>
+       <y>85</y>
        <width>40</width>
        <height>20</height>
       </rect>
      </property>
+     <property name="styleSheet">
+      <string notr="true">border-image:url(:/back_button/free-icon-back-786298.png)</string>
+     </property>
      <property name="text">
-      <string>뒤로</string>
+      <string/>
      </property>
     </widget>
     <widget class="QTextBrowser" name="check_word_2">
      <property name="geometry">
       <rect>
        <x>360</x>
-       <y>120</y>
+       <y>150</y>
        <width>80</width>
        <height>31</height>
       </rect>
@@ -287,23 +185,26 @@ p, li { white-space: pre-wrap; }
      <property name="geometry">
       <rect>
        <x>360</x>
-       <y>370</y>
+       <y>320</y>
        <width>80</width>
-       <height>30</height>
+       <height>80</height>
       </rect>
      </property>
      <property name="autoFillBackground">
-      <bool>true</bool>
+      <bool>false</bool>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border-image:url(:/record_button/free-icon-voice-recording-3444418.png)</string>
      </property>
      <property name="text">
-      <string>녹음</string>
+      <string/>
      </property>
     </widget>
     <widget class="QTextBrowser" name="check_word_3">
      <property name="geometry">
       <rect>
        <x>310</x>
-       <y>310</y>
+       <y>250</y>
        <width>180</width>
        <height>31</height>
       </rect>
@@ -316,7 +217,7 @@ p, li { white-space: pre-wrap; }
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Gulim'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;측정 가능한 주변 소음입니다.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;현재 데시벨 제공&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
    </widget>
@@ -329,103 +230,69 @@ p, li { white-space: pre-wrap; }
       <height>480</height>
      </rect>
     </property>
-    <widget class="QWidget" name="gridLayoutWidget">
+    <widget class="QPushButton" name="button_backtoselectsexual">
      <property name="geometry">
       <rect>
-       <x>120</x>
-       <y>60</y>
-       <width>541</width>
-       <height>331</height>
+       <x>150</x>
+       <y>85</y>
+       <width>40</width>
+       <height>20</height>
       </rect>
      </property>
-     <layout class="QGridLayout" name="gridLayout">
-      <property name="sizeConstraint">
-       <enum>QLayout::SetDefaultConstraint</enum>
-      </property>
-      <item row="4" column="1" alignment="Qt::AlignHCenter">
-       <widget class="QPushButton" name="button_resultnoise">
-        <property name="autoFillBackground">
-         <bool>true</bool>
-        </property>
-        <property name="text">
-         <string>소음 측정</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QScrollArea" name="scrollArea">
-        <property name="widgetResizable">
-         <bool>true</bool>
-        </property>
-        <widget class="QWidget" name="scrollAreaWidgetContents">
-         <property name="geometry">
-          <rect>
-           <x>0</x>
-           <y>0</y>
-           <width>456</width>
-           <height>262</height>
-          </rect>
-         </property>
-         <widget class="QTextBrowser" name="textBrowser_3">
-          <property name="geometry">
-           <rect>
-            <x>110</x>
-            <y>50</y>
-            <width>226</width>
-            <height>30</height>
-           </rect>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>16777215</width>
-            <height>30</height>
-           </size>
-          </property>
-          <property name="mouseTracking">
-           <bool>true</bool>
-          </property>
-          <property name="lineWrapMode">
-           <enum>QTextEdit::WidgetWidth</enum>
-          </property>
-          <property name="html">
-           <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Gulim'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:12pt; font-weight:600;&quot;&gt;소음 측정해주세요&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-          </property>
-         </widget>
-        </widget>
-       </widget>
-      </item>
-      <item row="0" column="0">
-       <widget class="QPushButton" name="button_backtoselectsexual">
-        <property name="text">
-         <string>뒤로</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QTextBrowser" name="check_sentense_2">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>16777215</width>
-          <height>30</height>
-         </size>
-        </property>
-        <property name="html">
-         <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border-image:url(:/back_button/free-icon-back-786298.png)</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QTextBrowser" name="check_sentense_2">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>220</x>
+       <y>80</y>
+       <width>360</width>
+       <height>30</height>
+      </rect>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>30</height>
+      </size>
+     </property>
+     <property name="html">
+      <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Gulim'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:11pt; font-weight:600;&quot;&gt;제시된 단어&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="button_resultnoise">
+     <property name="geometry">
+      <rect>
+       <x>360</x>
+       <y>360</y>
+       <width>80</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="autoFillBackground">
+      <bool>true</bool>
+     </property>
+     <property name="text">
+      <string>소음 측정</string>
+     </property>
     </widget>
    </widget>
    <widget class="QWidget" name="mainwindow" native="true">
@@ -469,10 +336,61 @@ p, li { white-space: pre-wrap; }
     <widget class="QPushButton" name="button_selectsexual">
      <property name="geometry">
       <rect>
-       <x>360</x>
+       <x>355</x>
        <y>300</y>
+       <width>91</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>16777212</height>
+      </size>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border-image : url(:/start_button/free-icon-start-button-5261874.png)</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="selectsexual" native="true">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>800</width>
+      <height>480</height>
+     </rect>
+    </property>
+    <widget class="QPushButton" name="button_backtomain">
+     <property name="geometry">
+      <rect>
+       <x>150</x>
+       <y>85</y>
+       <width>40</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border-image:url(:/back_button/free-icon-back-786298.png)</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="button_startchecknoise">
+     <property name="geometry">
+      <rect>
+       <x>360</x>
+       <y>360</y>
        <width>80</width>
-       <height>30</height>
+       <height>23</height>
       </rect>
      </property>
      <property name="autoFillBackground">
@@ -482,9 +400,67 @@ p, li { white-space: pre-wrap; }
       <string>학습시작</string>
      </property>
     </widget>
+    <widget class="QCheckBox" name="checkBox_2">
+     <property name="geometry">
+      <rect>
+       <x>440</x>
+       <y>200</y>
+       <width>80</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>여자</string>
+     </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="checkBox">
+     <property name="geometry">
+      <rect>
+       <x>280</x>
+       <y>200</y>
+       <width>80</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>남자</string>
+     </property>
+    </widget>
+    <widget class="QTextBrowser" name="textBrowser_4">
+     <property name="geometry">
+      <rect>
+       <x>220</x>
+       <y>80</y>
+       <width>360</width>
+       <height>30</height>
+      </rect>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>30</height>
+      </size>
+     </property>
+     <property name="mouseTracking">
+      <bool>true</bool>
+     </property>
+     <property name="lineWrapMode">
+      <enum>QTextEdit::WidgetWidth</enum>
+     </property>
+     <property name="html">
+      <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Gulim'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;성별을 선택하세요&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+    </widget>
    </widget>
-   <zorder>checknoise</zorder>
    <zorder>mainwindow</zorder>
+   <zorder>checknoise</zorder>
    <zorder>result</zorder>
    <zorder>resultnoise</zorder>
    <zorder>selectsexual</zorder>
@@ -501,7 +477,9 @@ p, li { white-space: pre-wrap; }
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="button.qrc"/>
+ </resources>
  <connections/>
  <slots>
   <slot>nexttoselectsexual()</slot>
