--- a/sub.ui
+++ b/sub.ui
@@ -10,10 +10,22 @@
     <height>480</height>
    </rect>
   </property>
+  <property name="maximumSize">
+   <size>
+    <width>800</width>
+    <height>480</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="maximumSize">
+    <size>
+     <width>800</width>
+     <height>480</height>
+    </size>
+   </property>
    <widget class="QWidget" name="result" native="true">
     <property name="geometry">
      <rect>
@@ -23,7 +35,13 @@
       <height>480</height>
      </rect>
     </property>
-    <widget class="QTextBrowser" name="check_word_4">
+    <property name="maximumSize">
+     <size>
+      <width>800</width>
+      <height>480</height>
+     </size>
+    </property>
+    <widget class="QTextBrowser" name="similar_score_text">
      <property name="geometry">
       <rect>
        <x>290</x>
@@ -112,7 +130,7 @@ p, li { white-space: pre-wrap; }
       <string notr="true">border-image:url(:/record_button/free-icon-voice-recording-3444418.png)</string>
      </property>
      <property name="text">
-      <string>재녹음</string>
+      <string/>
      </property>
     </widget>
    </widget>
@@ -125,13 +143,19 @@ p, li { white-space: pre-wrap; }
       <height>480</height>
      </rect>
     </property>
+    <property name="maximumSize">
+     <size>
+      <width>800</width>
+      <height>480</height>
+     </size>
+    </property>
     <widget class="QTextBrowser" name="check_word">
      <property name="geometry">
       <rect>
        <x>300</x>
-       <y>80</y>
+       <y>75</y>
        <width>200</width>
-       <height>31</height>
+       <height>30</height>
       </rect>
      </property>
      <property name="autoFillBackground">
@@ -142,7 +166,7 @@ p, li { white-space: pre-wrap; }
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Gulim'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;다음 단어를 말해주세요&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;다음 단어를 말해주세요&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
     <widget class="QPushButton" name="button_backtochecknoise">
@@ -200,7 +224,7 @@ p, li { white-space: pre-wrap; }
       <string/>
      </property>
     </widget>
-    <widget class="QTextBrowser" name="check_word_3">
+    <widget class="QTextBrowser" name="present_db">
      <property name="geometry">
       <rect>
        <x>310</x>
@@ -249,6 +273,12 @@ p, li { white-space: pre-wrap; }
       <height>480</height>
      </rect>
     </property>
+    <property name="maximumSize">
+     <size>
+      <width>800</width>
+      <height>480</height>
+     </size>
+    </property>
     <widget class="QPushButton" name="button_backtoselectsexual">
      <property name="geometry">
       <rect>
@@ -271,7 +301,7 @@ p, li { white-space: pre-wrap; }
       <string/>
      </property>
     </widget>
-    <widget class="QTextBrowser" name="check_sentense_2">
+    <widget class="QTextBrowser" name="given_sentense">
      <property name="enabled">
       <bool>true</bool>
      </property>
@@ -323,42 +353,19 @@ p, li { white-space: pre-wrap; }
       <height>480</height>
      </rect>
     </property>
-    <widget class="QTextBrowser" name="textBrowser_2">
-     <property name="geometry">
-      <rect>
-       <x>260</x>
-       <y>100</y>
-       <width>280</width>
-       <height>30</height>
-      </rect>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>16777215</width>
-       <height>30</height>
-      </size>
-     </property>
-     <property name="mouseTracking">
-      <bool>true</bool>
-     </property>
-     <property name="lineWrapMode">
-      <enum>QTextEdit::WidgetWidth</enum>
-     </property>
-     <property name="html">
-      <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Gulim'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:12pt; font-weight:600;&quot;&gt;원하는 학습을 선택하세요&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-     </property>
-    </widget>
+    <property name="maximumSize">
+     <size>
+      <width>800</width>
+      <height>480</height>
+     </size>
+    </property>
     <widget class="QPushButton" name="button_selectsexual">
      <property name="geometry">
       <rect>
-       <x>355</x>
-       <y>300</y>
-       <width>91</width>
-       <height>51</height>
+       <x>350</x>
+       <y>190</y>
+       <width>100</width>
+       <height>100</height>
       </rect>
      </property>
      <property name="maximumSize">
@@ -386,6 +393,12 @@ p, li { white-space: pre-wrap; }
       <width>800</width>
       <height>480</height>
      </rect>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>800</width>
+      <height>480</height>
+     </size>
     </property>
     <widget class="QPushButton" name="button_backtomain">
      <property name="geometry">
@@ -478,10 +491,10 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </widget>
-   <zorder>mainwindow</zorder>
-   <zorder>checknoise</zorder>
-   <zorder>result</zorder>
    <zorder>selectsexual</zorder>
+   <zorder>mainwindow</zorder>
+   <zorder>result</zorder>
+   <zorder>checknoise</zorder>
    <zorder>resultnoise</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
