--- a/sub.ui
+++ b/sub.ui
@@ -51,9 +51,9 @@
      <property name="geometry">
       <rect>
        <x>260</x>
-       <y>230</y>
+       <y>210</y>
        <width>281</width>
-       <height>51</height>
+       <height>80</height>
       </rect>
      </property>
      <property name="autoFillBackground">
@@ -63,16 +63,14 @@
       <string notr="true">font: 20pt</string>
      </property>
      <property name="markdown">
-      <string>유사도 안내 : 90%
-
-</string>
+      <string/>
      </property>
      <property name="html">
       <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Gulim'; font-size:20pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:13px; margin-bottom:13px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;유사도 안내 : 90%&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p align=&quot;center&quot; style=&quot;-qt-paragraph-type:empty; margin-top:13px; margin-bottom:13px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
     <widget class="QPushButton" name="button_exit">
@@ -118,6 +116,16 @@ p, li { white-space: pre-wrap; }
      </property>
      <property name="styleSheet">
       <string notr="true">border-image:url(:/result/icons/result.jpg)</string>
+     </property>
+    </widget>
+    <widget class="QWidget" name="text_result" native="true">
+     <property name="geometry">
+      <rect>
+       <x>580</x>
+       <y>20</y>
+       <width>211</width>
+       <height>271</height>
+      </rect>
      </property>
     </widget>
    </widget>
@@ -176,7 +184,7 @@ p, li { white-space: pre-wrap; }
      <property name="geometry">
       <rect>
        <x>310</x>
-       <y>150</y>
+       <y>180</y>
        <width>181</width>
        <height>71</height>
       </rect>
@@ -211,26 +219,6 @@ p, li { white-space: pre-wrap; }
       <string/>
      </property>
     </widget>
-    <widget class="QTextBrowser" name="present_db">
-     <property name="geometry">
-      <rect>
-       <x>600</x>
-       <y>30</y>
-       <width>180</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="autoFillBackground">
-      <bool>true</bool>
-     </property>
-     <property name="html">
-      <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Gulim'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;현재 데시벨 제공&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-     </property>
-    </widget>
     <widget class="QPushButton" name="button_stoprecord">
      <property name="geometry">
       <rect>
@@ -254,7 +242,7 @@ p, li { white-space: pre-wrap; }
      <property name="geometry">
       <rect>
        <x>530</x>
-       <y>145</y>
+       <y>175</y>
        <width>80</width>
        <height>80</height>
       </rect>
@@ -272,8 +260,8 @@ p, li { white-space: pre-wrap; }
     <widget class="QWidget" name="now_noise_image" native="true">
      <property name="geometry">
       <rect>
-       <x>40</x>
-       <y>150</y>
+       <x>90</x>
+       <y>140</y>
        <width>171</width>
        <height>221</height>
       </rect>
@@ -545,12 +533,12 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
    </widget>
+   <zorder>selectsexual</zorder>
+   <zorder>loading</zorder>
    <zorder>mainwindow</zorder>
    <zorder>result</zorder>
    <zorder>checknoise</zorder>
-   <zorder>selectsexual</zorder>
    <zorder>resultnoise</zorder>
-   <zorder>loading</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
