--- a/sub.ui
+++ b/sub.ui
@@ -53,7 +53,7 @@
        <x>260</x>
        <y>210</y>
        <width>281</width>
-       <height>80</height>
+       <height>71</height>
       </rect>
      </property>
      <property name="autoFillBackground">
@@ -63,14 +63,16 @@
       <string notr="true">font: 20pt</string>
      </property>
      <property name="markdown">
-      <string/>
+      <string>**유사도 : 90%**
+
+</string>
      </property>
      <property name="html">
       <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Gulim'; font-size:20pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot;-qt-paragraph-type:empty; margin-top:13px; margin-bottom:13px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p align=&quot;center&quot; style=&quot; margin-top:13px; margin-bottom:13px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;유사도 : 90%&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
     <widget class="QPushButton" name="button_exit">
@@ -536,9 +538,9 @@ p, li { white-space: pre-wrap; }
    <zorder>selectsexual</zorder>
    <zorder>loading</zorder>
    <zorder>mainwindow</zorder>
-   <zorder>result</zorder>
    <zorder>checknoise</zorder>
    <zorder>resultnoise</zorder>
+   <zorder>result</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
